samples/_failures_safe/1761393646_11fa91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd4b473d.c: In function ‘main’:
./samples/SAFE/__tmp_bd4b473d.c:144:42: error: expected ‘)’ at end of input
  144 |                 if (strcmp(buffer, "END")
      |                    ~                     ^
      |                                          )
./samples/SAFE/__tmp_bd4b473d.c:144:17: error: expected declaration or statement at end of input
  144 |                 if (strcmp(buffer, "END")
      |                 ^~
./samples/SAFE/__tmp_bd4b473d.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd4b473d.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd4b473d.c:144:17: error: expected declaration or statement at end of input
